--- a/sites/all/themes/apteka/scss/_reset.scss
+++ b/sites/all/themes/apteka/scss/_reset.scss
@@ -6,7 +6,7 @@ html, body {
 
 body {
   color: #555;
-  font: 400 15px 'Open Sans';
+  font: 400 15px 'Open Sans', sans-serif;
 }
 
 a {
@@ -17,6 +17,7 @@ a {
   padding: 0;
   margin: 0;
   @include box-sizing(border-box);
+  font-family: 'Open Sans', sans-serif;
 }
 
 .wrap {
@@ -65,7 +66,7 @@ ul.tabs {
     font-weight: 600;
     text-decoration: none;
     background-color: #e8e8e8;
-    padding: 10.5px 25px;
+    padding: 9px 25px;
     transition: .3s;
     &.active,
     &:hover {
@@ -93,7 +94,7 @@ ul.tabs {
     max-width: 460px;
     position: relative;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
     &:before {
       content: '*';
       color: $orange;
@@ -149,6 +150,13 @@ ul.tabs {
     color: #555;
     font-size: 15px;
     font-style: italic;
+  }
+}
+
+#user-login {
+  [type="submit"] {
+    width: 165px;
+    margin-top: 10px;
   }
 }
 
@@ -235,4 +243,19 @@ ul.tabs {
 .delimiter {
   padding-left: 4px;
   padding-right: 4px;
+}
+
+#block-nivo-slider-nivo-slider {
+  .nivo-directionNav {
+    > a {
+      width: 36px !important;
+      height: 37px !important;
+    }
+  }
+  .nivo-prevNav {
+    background: url("../images/nivo-prevNav.png") transparent no-repeat center center !important;
+  }
+  .nivo-nextNav {
+    background: url("../images/nivo-nextNav.png") transparent no-repeat center center !important;
+  }
 }
