--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -23,6 +23,9 @@
   .phone {
     font-weight: 600;
     font-size: 18px;
+    @media (max-width: 625px) {
+      padding-left: 12px;
+    }
     a {
       text-decoration: none;
     }
@@ -63,6 +66,13 @@
 .header-mobile-left {
   @media (min-width: 412px) {
     @include span(4);
+  }
+  @media (max-width: 411px) {
+    @include flexbox;
+    padding-bottom: 25px;
+    > div {
+      width: 50%;
+    }
   }
 }
 
@@ -169,8 +179,10 @@
 }
 
 .main-wrap {
-  padding-left: 0;
-  padding-right: 0;
+  @media (max-width: 815px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 #block-views-novelty-block,
@@ -284,12 +296,14 @@
 }
 
 #block-block-8 {
-  margin-left: auto;
-  margin-right: auto;
-  width: 130px;
   background: url("../images/local.png") no-repeat left 15px / 25px auto;
   margin-top: 10px;
   padding-left: 34px;
+  @media (min-width: 412px) {
+    margin-left: auto;
+    margin-right: auto;
+    width: 130px;
+  }
   p {
     &:first-child {
       button {
@@ -506,6 +520,7 @@
   color: transparent;
   width: 23px;
   height: 23px;
+  line-height: 23px;
   position: relative;
   float: right;
   border-radius: 100%;
@@ -670,7 +685,7 @@
   }
 }
 
-#search-block-form {
+#block-search-form form {
   margin-bottom: 10px;
   .container-inline {
     position: relative;
@@ -1885,7 +1900,9 @@
 }
 
 #block-session-recent-nodes-0 {
-  @include order(1);
+  @media (max-width: 625px) {
+    @include order(1);
+  }
   .block__title {
     border-bottom-color: #bbb;
     span {
@@ -1895,7 +1912,45 @@
 }
 
 #block-views-interesting-articles-block {
-  @include order(2);
+  @media (max-width: 625px) {
+    @include order(2);
+  }
+  .img-wrap {
+    margin-bottom: 14px;
+    .content {
+      @include flexbox;
+      @include align-items(center);
+      @include justify-content(center);
+      width: 100%;
+      height: 165px;
+      box-shadow: 0 0 10px 0 rgba(199, 199, 199, 0.5);
+    }
+    img {
+      width: 50%;
+      height: auto;
+    }
+  }
+  .title-w {
+    height: 70px;
+    @include flexbox;
+    @include align-items(center);
+    a {
+      text-decoration: none;
+    }
+  }
+  .read-more {
+    color: $orange;
+  }
+  @media (max-width: 625px) {
+    .block__title {
+      margin-left: -15px;
+      margin-right: -15px;
+      border-bottom-color: #bbb;
+      span {
+        padding-left: 15px;
+      }
+    }
+  }
 }
 
 .nivo-caption, .nivo-box, .nivo-slice {
