--- a/sites/all/themes/apteka/scss/_base.scss
+++ b/sites/all/themes/apteka/scss/_base.scss
@@ -384,10 +384,10 @@
   padding-left: 35px;
   background: url("../images/local.png") no-repeat left center;
   @media (min-width: 1081px) {
-    @include span(2.5);
+    @include span(3);
   }
   a {
-    margin-right: 25px;
+    margin-right: 15px;
     display: inline-block;
     cursor: pointer;
     text-decoration: none;
@@ -479,7 +479,7 @@
 
 #block-menu-menu-login {
   @media (min-width: 1081px) {
-    @include span(2.4);
+    @include span(3);
     padding-left: 26px;
   }
   @media (max-width: 1080px) and (min-width: 601px) {
@@ -510,7 +510,7 @@
 #block-commerce-cart-cart {
   position: relative;
   @media (min-width: 1081px) {
-    @include span(1.457);
+    float: right;
     background: url("../images/shopping-cart.png") no-repeat left center;
   }
   @media (max-width: 1080px) and (min-width: 601px) {
